Add first place, rewrite the system to work with places too

--- a/assets/characters/brian.yaml
+++ b/assets/characters/brian.yaml
@@ -12,9 +12,9 @@ initial:
 
 opinion:
   lines:
-  - "Брайен: Простите, что я думаю?"
+  - "Брайен: Простите, что я *думаю*?"
   - "Офицер Эрнер: А ты ничего не думаешь? Тишайшее село на краю мира, три с половиной человека, убита старушка у которой нет ни гроша за душой."
-  - "Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я думаю."
+  - "Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я *думаю*."
   - "..."
   - "Брайен: Мне кажется... Всё произошедшее точно не складывается у меня в голове."
   - "..."
