--- a/assets/places/pub.yaml
+++ b/assets/places/pub.yaml
@@ -1,7 +1,10 @@
 states:
 - line: Паб полупуст. Пара местных жителей охлаждаются пивом после тяжёлой работы.
+  options:
+  - line: "Выйти на улицу"
+    goto: place central_street
 - line: Вы замечаете на себе неловкий взгляд парня в форме милиции. Поймав ваш взгляд, он пытается сделать вид, что рассматривал стеллаж с алкоголем за барной стойкой.
-  if: before brian.initial
+  if: before dialogue brian.initial
   options:
   - line: "Подойти"
-    goto: brian.initial
+    goto: dialogue brian.initial
