Change from 'goto' to 'does' mechanics Add __contains__ for Entity

--- a/assets/characters/brian.yaml
+++ b/assets/characters/brian.yaml
@@ -1,32 +1,35 @@
-initial:
-  lines:
-  - "Брайен: Здравствуйте, сэр. Вы офицер Эрнер, не так ли?"
-  - "Офицер Эрнер: Да. Я могу вам как-то помочь?"
-  - "Брайен: Меня зовут Брайен, меня прислали сюда за два дня до вас. Я ваш помощник."
-  - "Офицер Эрнер: Хм, ну ладно."
-  options:
-  - line: "Для начала, мне потребуется чёткое описание всех фактов."
-    goto: description
-  - line: "Для начала, я хочу знать как ты смотришь на произошедшее."
-    goto: opinion
+dialogue:
+  entrypoints: [initial]
+  conversations:
+    initial:
+      lines:
+      - "Брайен: Здравствуйте, сэр. Вы офицер Эрнер, не так ли?"
+      - "Офицер Эрнер: Да. Я могу вам как-то помочь?"
+      - "Брайен: Меня зовут Брайен, меня прислали сюда за два дня до вас. Я ваш помощник."
+      - "Офицер Эрнер: Хм, ну ладно."
+      options:
+      - line: "Для начала, мне потребуется чёткое описание всех фактов."
+        goto: description
+      - line: "Для начала, я хочу знать как ты смотришь на произошедшее."
+        goto: opinion
 
-opinion:
-  lines:
-  - "Брайен: Простите, что я *думаю*?"
-  - "Офицер Эрнер: А ты ничего не думаешь? Тишайшее село на краю мира, три с половиной человека, убита старушка у которой нет ни гроша за душой."
-  - "Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я *думаю*."
-  - "..."
-  - "Брайен: Мне кажется... Всё произошедшее точно не складывается у меня в голове."
-  - "..."
-  - "Брайен: Старушка не такая невинная как кажется."
-  - "Брайен: Ведьма, сэр."
-  - "Брайен: Навела порчу на мужское хозяйство лесоруба и тот её зарубил."
-  - "..."
-  - "Офицер Эрнер (смеясь): Смелая теория."
+    opinion:
+      lines:
+      - "Брайен: Простите, что я *думаю*?"
+      - "Офицер Эрнер: А ты ничего не думаешь? Тишайшее село на краю мира, три с половиной человека, убита старушка у которой нет ни гроша за душой."
+      - "Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я *думаю*."
+      - "..."
+      - "Брайен: Мне кажется... Всё произошедшее точно не складывается у меня в голове."
+      - "..."
+      - "Брайен: Старушка не такая невинная как кажется."
+      - "Брайен: Ведьма, сэр."
+      - "Брайен: Навела порчу на мужское хозяйство лесоруба и тот её зарубил."
+      - "..."
+      - "Офицер Эрнер (смеясь): Смелая теория."
 
-description:
-  lines:
-  - "Брайен: Да, сэр."
-  - "Брайен: Три дня назад пожилая женщина убита ударом острого предмета в голову."
-  - "Брайен: Убитая - Иллия Потс, жила на краю деревни, травница."
-  - "Брайен: Это первое убийство здесь с самого момента окончания Войны."
+    description:
+      lines:
+      - "Брайен: Да, сэр."
+      - "Брайен: Три дня назад пожилая женщина убита ударом острого предмета в голову."
+      - "Брайен: Убитая - Иллия Потс, жила на краю деревни, травница."
+      - "Брайен: Это первое убийство здесь с самого момента окончания Войны."
