--- a/assets/places/central_street.yaml
+++ b/assets/places/central_street.yaml
@@ -1,4 +1,8 @@
+name: Central street
 states:
 - line: Вы находитесь на центральной улице.
+  options:
+  - line: "Зайти в паб"
+    does: Action.stands_at(places['Pub'])
 - line: Она выглядит довольно пусто - большая часть жителей всё ещё работает в полях.
-  if: before place central_street
+  if: "'Central street' in people['Officer Aernerh'].memory.places"
