--- a/assets/places/central_street.yaml
+++ b/assets/places/central_street.yaml
@@ -3,7 +3,8 @@ people: !!set {}
 states:
 - line: Вы находитесь на центральной улице.
   options:
-  - line: "Зайти в паб"
+  - line: Зайти в паб
     does: Action.stands_at(places['Pub'])
+  - line: Пойти к дому убитой
+    does: Action.stands_at(places['Illia Pots\'s house'])
 - line: Она выглядит довольно пусто - большая часть жителей всё ещё работает в полях.
-  if: "'Central street' in people['Officer Aernerh'].memory.places"
