--- a/assets/places/central_street.yaml
+++ b/assets/places/central_street.yaml
@@ -1,10 +1,12 @@
-name: Central street
+name: central_street
 people: !!set {}
 states:
-- line: Вы находитесь на центральной улице.
-  options:
-  - line: Зайти в паб
-    does: Action.stands_at(places['Pub'])
-  - line: Пойти к дому убитой
-    does: Action.stands_at(places['House of Illia Pots'])
-- line: Она выглядит довольно пусто - большая часть жителей всё ещё работает в полях.
+  normal:
+    line: Вы находитесь на центральной улице.
+    options:
+    - line: Зайти в паб
+      does: Action.stands_at(places.pub)
+    - line: Пойти к дому убитой
+      does: Action.stands_at(places.house_of_illia_pots)
+  # full_description: TODO
+  #  line: Она выглядит довольно пусто - большая часть жителей всё ещё работает в полях.
