--- a/assets/places/pub.yaml
+++ b/assets/places/pub.yaml
@@ -1,22 +1,24 @@
-name: Pub
+name: pub
 people: !!set
-  Brian: null
-  Officer Aernerh: null
+  brian: null
+  aernerh: null
 
 
 states: # TODO write a full description
-- line: Паб полупуст. Пара местных жителей охлаждаются пивом после тяжёлой работы.
-  options:
-  - line: "Выйти на улицу"
-    does: Action.stands_at(places['Central street'])
-    if: "'Brian.initial' in mc.memory['dialogues']"
-#    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.meeting' in mc.memory['dialogues']"
-#  - line: "Выйти на улицу"
-#    does: Action.talks_to(places['Yarn'], 'politics')
-#    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.politics' not in mc.memory['dialogues']"
+  normal:
+    line: Паб полупуст. Пара местных жителей охлаждаются пивом после тяжёлой работы.
+    options:
+    - line: "Выйти на улицу"
+      does: Action.stands_at(places.central_street)
+      if: "'brian.initial' in mc.memory"
+  #    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.meeting' in mc.memory['dialogues']"
+  #  - line: "Выйти на улицу"
+  #    does: Action.talks_to(places['Yarn'], 'politics')
+  #    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.politics' not in mc.memory['dialogues']"
 
-- line: Вы замечаете на себе неловкий взгляд парня в форме милиции. Поймав ваш взгляд, он пытается сделать вид, что рассматривал стеллаж с алкоголем за барной стойкой.
-  if: "'Brian.initial' not in mc.memory['dialogues']"
-  options:
-  - line: "Подойти"
-    does: Action.talks_to(people['Brian'], 'initial')
+  meet_brian:
+    line: Вы замечаете на себе неловкий взгляд парня в форме милиции. Поймав ваш взгляд, он пытается сделать вид, что рассматривал стеллаж с алкоголем за барной стойкой.
+    if: "'brian.initial' not in mc.memory"
+    options:
+    - line: "Подойти"
+      does: Action.talks_to(people.brian, 'initial')
