--- a/assets/locations/illia_pots_house.yml
+++ b/assets/locations/illia_pots_house.yml
@@ -1,18 +1,18 @@
 name: house_of_illia_pots
-people: !!set {}
+npcs: !!set {}
 states:
   normal:
     line: Вы находитесь в прихожей старого обветшалого особняка.
     options:
     - line: Выйти на улицу
-      does: Action.stands_at(places.central_street)
+      does: Action.stands_at(locations.central_street)
 
   full_description:
     line:
     if: "'house_of_illia_pots' not in mc.memory"
 
   brian_expertise:
-    if: people.brian.intelligence >= 1 and 'brian.murder_expertise' not in mc.memory
+    if: npc.brian.intelligence >= 1 and 'brian.murder_expertise' not in mc.memory
     options:
     - line: Спросить Брайана
-      does: Action.talks_to(people.brian, 'murder_expertise')
+      does: Action.talks_to(npc.brian, 'murder_expertise')
