--- a/assets/locations/pub.yaml
+++ b/assets/locations/pub.yaml
@@ -1,5 +1,5 @@
 name: pub
-people: !!set
+npcs: !!set
   brian: null
   aernerh: null
 
@@ -9,11 +9,11 @@ states: # TODO write a full description
     line: Паб полупуст. Пара местных жителей охлаждаются пивом после тяжёлой работы.
     options:
     - line: "Выйти на улицу"
-      does: Action.stands_at(places.central_street)
+      does: Action.stands_at(locations.central_street)
       if: "'brian.initial' in mc.memory"
   #    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.meeting' in mc.memory['dialogues']"
   #  - line: "Выйти на улицу"
-  #    does: Action.talks_to(places['Yarn'], 'politics')
+  #    does: Action.talks_to(locations['Yarn'], 'politics')
   #    if: "'Brian.initial' in mc.memory['dialogues'] and 'Yarn.politics' not in mc.memory['dialogues']"
 
   meet_brian:
@@ -21,4 +21,4 @@ states: # TODO write a full description
     if: "'brian.initial' not in mc.memory"
     options:
     - line: "Подойти"
-      does: Action.talks_to(people.brian, 'initial')
+      does: Action.talks_to(npc.brian, 'initial')
