--- a/assets/locations/pub.yaml
+++ b/assets/locations/pub.yaml
@@ -7,13 +7,14 @@ states:  # TODO write a full description
   normal:
     line: Паб полупуст. Пара местных жителей охлаждаются пивом после тяжёлой работы.
     options:
-    - line: "Выйти на улицу"
-      does: Action.stands_at(locations.central_street)
-      if: "'brian.initial' in mc.memory"
+    - line: Выйти на улицу
+      does: !script player.will_go_to = locations.central_street
+      if: !condition "'brian.initial' in player.memory"
 
   meet_brian:
     line: Вы замечаете на себе неловкий взгляд парня в форме милиции. Поймав ваш взгляд, он пытается сделать вид, что рассматривал стеллаж с алкоголем за барной стойкой.
-    if: "'brian.initial' not in mc.memory"
+    if: !condition "'brian.initial' not in player.memory"
     options:
-    - line: "Подойти"
-      does: Action.talks_to(npc.brian, 'initial')
+    - line: Подойти
+      does: !script player.will_talk_to = npcs.brian
+      if: !condition "'brian.initial' not in player.memory"
