--- a/assets/npc/brian.yaml
+++ b/assets/npc/brian.yaml
@@ -5,38 +5,38 @@ intelligence: 0
 dialogue:
   initial:
     lines:
-    - "Брайен: Здравствуйте, сэр. Вы офицер Эрнер, не так ли?"
-    - "Офицер Эрнер: Да. Я могу вам как-то помочь?"
-    - "Брайен: Меня зовут Брайен, меня прислали сюда за два дня до вас. Я ваш помощник."
-    - "Офицер Эрнер: Хм, ну ладно."
+    - Брайен: Здравствуйте, сэр. Вы офицер Эрнер, не так ли?
+    - Офицер Эрнер: Да. Я могу вам как-то помочь?
+    - Брайен: Меня зовут Брайен, меня прислали сюда за два дня до вас. Я ваш помощник.
+    - Офицер Эрнер: Хм, ну ладно.
     options:
-    - line: "Для начала, мне потребуется чёткое описание всех фактов."
+    - line: Для начала, мне потребуется чёткое описание всех фактов.
       goto: description
-    - line: "Для начала, я хочу знать как ты смотришь на произошедшее."
+    - line: Для начала, я хочу знать как ты смотришь на произошедшее.
       goto: opinion
-      action: self.intelligence += 1
 
   opinion:
     lines:
-    - "Брайен: Простите, что я *думаю*?"
-    - "Офицер Эрнер: А ты ничего не думаешь? Тишайшее село на краю мира, три с половиной человека, убита старушка у которой нет ни гроша за душой."
-    - "Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я *думаю*."
-    - "..."
-    - "Брайен: Мне кажется... Всё произошедшее точно не складывается у меня в голове."
-    - "..."
-    - "Брайен: Старушка не такая невинная как кажется."
-    - "Брайен: Ведьма, сэр."
-    - "Брайен: Навела порчу на мужское хозяйство лесоруба и тот её зарубил."
-    - "..."
-    - "Офицер Эрнер (смеясь): Смелая теория."
+    - !script self.intelligence += 1
+    - Брайен: Простите, что я *думаю*?
+    - Офицер Эрнер: А ты ничего не думаешь? Тишайшее село на краю мира, три с половиной человека, убита старушка у которой нет ни гроша за душой.
+    - Брайен: Извините, просто это первый случай, когда кто-либо интересовался что я *думаю*.
+    - ...
+    - Брайен: Мне кажется... Всё произошедшее точно не складывается у меня в голове.
+    - ...
+    - Брайен: Старушка не такая невинная как кажется.
+    - Брайен: Ведьма, сэр.
+    - Брайен: Навела порчу на мужское хозяйство лесоруба и тот её зарубил.
+    - ...
+    - Офицер Эрнер (смеясь): Смелая теория.
 
   description:
     lines:
-    - "Брайен: Да, сэр."
-    - "Брайен: Три дня назад пожилая женщина убита ударом острого предмета в голову."
-    - "Брайен: Убитая - Иллия Потс, жила на краю деревни, травница."
-    - "Брайен: Это первое убийство здесь с самого момента окончания Войны."
+    - Брайен: Да, сэр.
+    - Брайен: Три дня назад пожилая женщина убита ударом острого предмета в голову.
+    - Брайен: Убитая - Иллия Потс, жила на краю деревни, травница.
+    - Брайен: Это первое убийство здесь с самого момента окончания Войны.
 
   murder_expertise:
     lines:
-    - "Брайен: Это не выглядит как удар топором."
+    - Брайен: Это не выглядит как удар топором.
