--- a/assets/npc/bartender.yaml
+++ b/assets/npc/bartender.yaml
@@ -64,8 +64,13 @@ dialogue:
     - Bartender: What is the...
     - Bartender (looks at you with suspicion): ...
     - Bartender (angrily): Get out!
-    - !script self.opinion -= 15
-    - !script player.will_go_to = locations.central_street
+    - You are forced to leave the pub.
+    - !script | 
+      self.opinion -= 15
+      player.will_go_to = locations.central_street
+      npcs.brian.will_go_to = locations.central_street
+      player.will_talk_to = npcs.brian
+      player.will_talk_about = 'meeting_outside'
 
   meeting_3:
     lines:
