Distant speech-related improvements
Make brian always follow player, fix bartender's position, make decision-making available to NPCs

--- a/assets/locations/house_of_illia_pots.yaml
+++ b/assets/locations/house_of_illia_pots.yaml
@@ -21,6 +21,7 @@ states:
       if: > 
         npcs.brian.intelligence >= 1 
         and 'brian.murder_expertise' not in player.memory
+        and npcs.brian in self.npcs
     - line: Why is she still here?
       does: |
         player.will_talk_to = npcs.brian
