--- a/assets/npc/brian.yaml
+++ b/assets/npc/brian.yaml
@@ -3,6 +3,10 @@ name: brian
 location: pub
 intelligence: 0
 
+mind: !script |
+  if npcs.aernerh.location != self.location:
+    self.will_go_to = npcs.aernerh.location
+
 dialogue:
   meeting_inside:
     lines:
