--- a/assets/locations/house_of_illia_pots.yaml
+++ b/assets/locations/house_of_illia_pots.yaml
@@ -21,11 +21,11 @@ states:
       if: > 
         npcs.brian.intelligence >= 1 
         and 'brian.murder_expertise' not in player.memory
-        and npcs.brian in self.npcs
+#        and npcs.brian in self.npcs
     - line: Why is she still here?
       does: |
         player.will_talk_to = npcs.brian
         player.will_talk_about = 'corpse'
       if: > 
         'brian.corpse' not in player.memory
-        and npcs.brian in self.npcs
+#        and npcs.brian in self.npcs
