Rename player's character (closes #39)
Right now it is Aernerh and it is hard to read properly. It should probably be changed to Errner in everyday activities, and Aernerh can remain in official documents.

--- a/assets/locations/pub.yaml
+++ b/assets/locations/pub.yaml
@@ -1,6 +1,6 @@
 !location
 name: pub
-npcs: [brian, aernerh, bartender]
+npcs: [brian, errner, bartender]
 
 
 states:  # TODO write a full description
