--- a/assets/npcs/brian.yaml
+++ b/assets/npcs/brian.yaml
@@ -4,8 +4,8 @@ location: pub
 intelligence: 0
 
 mind: |
-  if npcs.errner.location != self.location:
-    self.will_go_to = npcs.errner.location
+  if 'will_go_to' in npcs.errner:
+    self.will_go_to = npcs.errner.will_go_to
 
 dialogue:
   meeting_inside:
